FLY wire David/force-app/main/default/objects/Opportunity/fields/Days_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Close__c</fullName>
    <formula>IF( IsWon ,( 
CloseDate - DATEVALUE(CreatedDate)), 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For Closed Opps how long did it take to close the Opportunity. e.g. From Create Date to Closed Won</inlineHelpText>
    <label>Days to Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>