FLY wire David/force-app/main/default/objects/Opportunity/fields/Days_to_Live__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Live__c</fullName>
    <formula>IF( 
ISBLANK(Date_First_Opp_Product_Live__c),
0,
(Date_First_Opp_Product_Live__c - CloseDate)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText># of days it took for Opportunity to go live. Live Date - Close Date.</inlineHelpText>
    <label>Days to Live</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>