FLY wire David/force-app/main/default/objects/Opportunity/fields/DHC_EMR__c.field-meta.xml
<CustomField>
    <fullName>DHC_EMR__c</fullName>
    <formula>Account.texcellency__DefHC_EMR_Vendor_Inpatient__c</formula>
    <inlineHelpText>Definitive HC Inpatient EMR from Account</inlineHelpText>
    <label>DHC EMR</label>
    <type>Text</type>
</CustomField>