FLY wire David/force-app/main/default/objects/Opportunity/fields/DOM_Bank_Transfer_ARR__c.field-meta.xml
<CustomField>
    <fullName>DOM_Bank_Transfer_ARR__c</fullName>
    <description>B2B Field to help with ARR and Payment Flow Analysis. SAL-3159</description>
    <inlineHelpText>Enter the estimated annual domestic bank transfer revenue in $</inlineHelpText>
    <label>DOM Bank Transfer ARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>