FLY wire David/force-app/main/default/objects/Opportunity/fields/DOM_Bank_Transfer_Fee__c.field-meta.xml
<CustomField>
    <fullName>DOM_Bank_Transfer_Fee__c</fullName>
    <description>B2B Field to help with ARR and Payment Flow Analysis. SAL-3151</description>
    <inlineHelpText>Enter the current Flywire amount paid by the client for a domestic bank transfer fee, if applicable.</inlineHelpText>
    <label>DOM Bank Transfer Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>