FLY wire David/force-app/main/default/objects/Opportunity/fields/DOM_Card_Rate__c.field-meta.xml
<CustomField>
    <fullName>DOM_Card_Rate__c</fullName>
    <description>B2B Field to help with ARR and Payment Flow Analysis. SAL-3154</description>
    <inlineHelpText>Enter the current Flywire percentage rate paid for domestic credit card processing</inlineHelpText>
    <label>DOM Card Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>