FLY wire David/force-app/main/default/objects/Opportunity/fields/DOM_Credit_Card_ARR__c.field-meta.xml
<CustomField>
    <fullName>DOM_Credit_Card_ARR__c</fullName>
    <description>B2B Field to help with ARR and Payment Flow Analysis. SAL-3158</description>
    <inlineHelpText>Enter the estimated annual domestic credit card revenue in $</inlineHelpText>
    <label>DOM Credit Card ARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>