FLY wire David/force-app/main/default/objects/Opportunity/fields/Effective_Spread__c.field-meta.xml
<CustomField>
    <fullName>Effective_Spread__c</fullName>
    <description>Used to calculate estimated revenue based on the annual money moved field</description>
    <inlineHelpText>Used to calculate estimated revenue based on the annual money moved field</inlineHelpText>
    <label>Effective Spread %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>