FLY wire David/force-app/main/default/objects/Opportunity/fields/Est_Monthly_Volume_USD_CCY_3__c.field-meta.xml
<CustomField>
    <fullName>Est_Monthly_Volume_USD_CCY_3__c</fullName>
    <description>For Currency 3 - Capture how much of the total Monthly Volume is for this Currency.</description>
    <inlineHelpText>Enter how much of the total monthly volume is for the Currency in &apos;Currency 3&apos;.</inlineHelpText>
    <label>OBS Est. Monthly Volume (USD) CCY 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>