FLY wire David/force-app/main/default/objects/Opportunity/fields/Estimated_Annual_Revenue_USD__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Revenue_USD__c</fullName>
    <description>Estimated Revenue for Commercial Deals</description>
    <formula>Effective_Spread__c *  Proj_Annual_Money_Moved_USD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Estimated Revenue for Commercial Deals. Value to be copied to Product</inlineHelpText>
    <label>Estimated Annual Revenue (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>