FLY wire David/force-app/main/default/objects/Opportunity/fields/Exclusivity__c.field-meta.xml
<CustomField>
    <fullName>Exclusivity__c</fullName>
    <description>Created for BOPI-966. Used to twin value of Exclusivity from Quote to Opportunity</description>
    <label>Exclusivity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>