FLY wire David/force-app/main/default/objects/Opportunity/fields/FX_XB_Outgoing_PYMTS__c.field-meta.xml
<CustomField>
    <fullName>FX_XB_Outgoing_PYMTS__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of FX cross border outgoing payments for CA Payables auto calculation SAL-2265
Updt 4/1/24 SAL-2642/SAL-3624</description>
    <inlineHelpText>Number of FX Cross Border Outgoing Payments processed Annually</inlineHelpText>
    <label>FX XB Outgoing PYMTS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>