FLY wire David/force-app/main/default/objects/Opportunity/fields/Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin__c</fullName>
    <description>Formula field based on Rollup Fields filled in by Flow, created for SAL-2364 Commissions related</description>
    <formula>( Rollup_Portal_Margin_Revenue__c -  Rollup_Portal_Margin_Cost__c )/ Rollup_Portal_Margin_Revenue__c</formula>
    <inlineHelpText>Gross Margin % based on Gross Revenue data related to this Opportunity.</inlineHelpText>
    <label>Gross Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>