FLY wire David/force-app/main/default/objects/Opportunity/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <description>Field requested by Tom Metcalf for Edu use only.</description>
    <inlineHelpText>Ideally quantifiable ramifications of existing state: revenue lost to fees, hours/weeks lost to manual work, etc. May also items such as reputational risk, staff resignation, etc.</inlineHelpText>
    <label>Impact</label>
    <length>150</length>
    <type>Text</type>
</CustomField>