FLY wire David/force-app/main/default/objects/Opportunity/fields/Int_Kick_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Int_Kick_Off_Date__c</fullName>
    <description>The Kick-Off Date from Integration Record, automatically copied from whichever related Integration adds a date first.</description>
    <inlineHelpText>The Kick-Off Date from Integration Record, automatically copied from whichever related Integration adds a date first.</inlineHelpText>
    <label>Int Kick-Off Date</label>
    <type>Date</type>
</CustomField>