FLY wire David/force-app/main/default/objects/Opportunity/fields/Integration_ARR__c.field-meta.xml
<CustomField>
    <fullName>Integration_ARR__c</fullName>
    <description>Created to display ARR from SFDC in integrations as we needed a currency and not a number field.</description>
    <formula>IF(Opp_ARR__c = 0,Amount,Opp_ARR__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Created to display ARR from SFDC in integrations.</inlineHelpText>
    <label>Integration ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>