FLY wire David/force-app/main/default/objects/Opportunity/fields/Integration_Partner__c.field-meta.xml
<CustomField>
    <fullName>Integration_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Integration Partner for Commercial Deals</description>
    <inlineHelpText>Search for the Partner we will integrate with. If you can&apos;t find the Account notify your verticals Partner specialist.</inlineHelpText>
    <label>Integration Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opp (Int. Partner)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>