FLY wire David/force-app/main/default/objects/Opportunity/fields/INTERAC_outgoing_PYMTS__c.field-meta.xml
<CustomField>
    <fullName>INTERAC_outgoing_PYMTS__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of INTERAC outgoing payments for CA payables auto calculation SAL-2265</description>
    <inlineHelpText>Number of INTERAC outgoing payments</inlineHelpText>
    <label>OBS INTERAC outgoing PYMTS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>