FLY wire David/force-app/main/default/objects/Opportunity/fields/Intl_Bank_Transfer_Spread__c.field-meta.xml
<CustomField>
    <fullName>Intl_Bank_Transfer_Spread__c</fullName>
    <description>B2B Field to help with ARR and Payment Flow Analysis. SAL-3153</description>
    <inlineHelpText>Enter the current Flwyire spread that the client pays for their international bank transfers</inlineHelpText>
    <label>Intl Bank Transfer Spread</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>