FLY wire David/force-app/main/default/objects/Opportunity/fields/Intl_Card_Rate__c.field-meta.xml
<CustomField>
    <fullName>Intl_Card_Rate__c</fullName>
    <description>B2B Field to help with ARR and Payment Flow Analysis. SAL-3155</description>
    <inlineHelpText>Enter the current Flywire percentage rate paid for international credit card processing</inlineHelpText>
    <label>Intl Card Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>