FLY wire David/force-app/main/default/objects/Opportunity/fields/Intl_Credit_Card_ARR__c.field-meta.xml
<CustomField>
    <fullName>Intl_Credit_Card_ARR__c</fullName>
    <description>B2B Field to help with ARR and Payment Flow Analysis. SAL-3157</description>
    <inlineHelpText>Enter the estimated annual international credit card revenue in $</inlineHelpText>
    <label>Intl Credit Card ARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>