FLY wire David/force-app/main/default/objects/Opportunity/fields/Is_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Is_Amendment__c</fullName>
    <description>BOPI-573 Field used on the Record Page to conditionally show the Prevent Redundat Opps flow</description>
    <formula>NOT(ISBLANK(SBQQ__AmendedContract__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Amendment</label>
    <type>Checkbox</type>
</CustomField>