FLY wire David/force-app/main/default/objects/Opportunity/fields/Leader_Forecast_Override__c.field-meta.xml
<CustomField>
    <fullName>Leader_Forecast_Override__c</fullName>
    <defaultValue>&quot;Pipeline&quot;</defaultValue>
    <description>Created for SALDEV-1276</description>
    <label>Leader Forecast Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Commit</fullName>
            </value>
            <value>
                <fullName>Best Case</fullName>
            </value>
            <value>
                <fullName>Pipeline</fullName>
                <default>true</default>
                <label>Pipeline</label>
            </value>
            <value>
                <fullName>Omitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>