FLY wire David/force-app/main/default/objects/Opportunity/fields/Lock_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Lock_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Opportunity locked for user edit.</description>
    <label>Lock Opportunity</label>
    <type>Checkbox</type>
</CustomField>