FLY wire David/force-app/main/default/objects/Opportunity/fields/Locked_Opp__c.field-meta.xml
<CustomField>
    <fullName>Locked_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Non New Business Opportunities locked from updates after BOPI go live.</description>
    <label>Locked Opp</label>
    <type>Checkbox</type>
</CustomField>