FLY wire David/force-app/main/default/objects/Opportunity/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <description>Select why we loss the opportunity</description>
    <inlineHelpText>Select why we loss the opportunity</inlineHelpText>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KYC/Legal/Credit/Security</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Opportunity Size/Profile</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pricing/Budget</fullName>
            </value>
            <value>
                <fullName>Product Functionality</fullName>
            </value>
            <value>
                <fullName>Status Quo (Existing Process or Provider)</fullName>
            </value>
            <value>
                <fullName>Timing/On Hold/Delayed</fullName>
            </value>
            <value>
                <fullName>Bad Timing</fullName>
                <isActive>false</isActive>
                <label>Bad Timing</label>
            </value>
            <value>
                <fullName>Budget</fullName>
                <isActive>false</isActive>
                <label>Budget</label>
            </value>
            <value>
                <fullName>Compliance</fullName>
                <isActive>false</isActive>
                <label>Compliance</label>
            </value>
            <value>
                <fullName>Compliance Issue</fullName>
                <isActive>false</isActive>
                <label>Compliance Issue</label>
            </value>
            <value>
                <fullName>Currency Requirements</fullName>
                <isActive>false</isActive>
                <label>Currency Requirements</label>
            </value>
            <value>
                <fullName>Disqualified Acquisition Opportunities</fullName>
                <isActive>false</isActive>
                <label>Disqualified Acquisition Opportunities</label>
            </value>
            <value>
                <fullName>Disqualified by Flywire</fullName>
                <isActive>false</isActive>
                <label>Disqualified by Flywire</label>
            </value>
            <value>
                <fullName>Legal Jurisdiction Restricted</fullName>
                <isActive>false</isActive>
                <label>Legal Jurisdiction Restricted</label>
            </value>
            <value>
                <fullName>Legal and Compliance</fullName>
                <isActive>false</isActive>
                <label>Legal and Compliance</label>
            </value>
            <value>
                <fullName>Lost Communication</fullName>
                <isActive>false</isActive>
                <label>Lost Communication</label>
            </value>
            <value>
                <fullName>Lost To Competitor</fullName>
                <isActive>false</isActive>
                <label>Lost To Competitor</label>
            </value>
            <value>
                <fullName>Lost to Incumbent</fullName>
                <isActive>false</isActive>
                <label>Lost to Incumbent</label>
            </value>
            <value>
                <fullName>MISSING IN DATA LOAD</fullName>
                <isActive>false</isActive>
                <label>MISSING IN DATA LOAD</label>
            </value>
            <value>
                <fullName>Meeting Held - Not Interested</fullName>
                <isActive>false</isActive>
                <label>Meeting Held - Not Interested</label>
            </value>
            <value>
                <fullName>Need Payables</fullName>
                <isActive>false</isActive>
                <label>Need Payables</label>
            </value>
            <value>
                <fullName>Network Referral</fullName>
                <isActive>false</isActive>
                <label>Network Referral</label>
            </value>
            <value>
                <fullName>Not A Fit</fullName>
                <isActive>false</isActive>
                <label>Not A Fit</label>
            </value>
            <value>
                <fullName>Not Actively Working</fullName>
                <isActive>false</isActive>
                <label>Not Actively Working</label>
            </value>
            <value>
                <fullName>Not Enough International Volume</fullName>
                <isActive>false</isActive>
                <label>Not Enough International Volume</label>
            </value>
            <value>
                <fullName>Not Enough Intl Volume</fullName>
                <isActive>false</isActive>
                <label>Not Enough Intl Volume</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
                <isActive>false</isActive>
                <label>On Hold/Delay/No Activity</label>
            </value>
            <value>
                <fullName>On Hold/Delay/No Activity</fullName>
                <isActive>false</isActive>
                <label>On Hold/Delay/No Activity</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>