FLY wire David/force-app/main/default/objects/Opportunity/fields/Lost_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Details__c</fullName>
    <description>To enter details when opportunity is Closed Lost SAL-2845</description>
    <inlineHelpText>When &apos;Other&apos; is selected, enter more details why the opp went Closed Lost</inlineHelpText>
    <label>Lost Reason Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>