FLY wire David/force-app/main/default/objects/Opportunity/fields/Lost_Sub_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Sub_Reason__c</fullName>
    <description>Sub Reason values as per SAL-2845</description>
    <inlineHelpText>Specify the Sub-Reason why the Opportunity was Lost</inlineHelpText>
    <label>Lost Sub-Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lost_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alternative Payment Methods</fullName>
            </value>
            <value>
                <fullName>Cashiering</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Domestic Only</fullName>
            </value>
            <value>
                <fullName>Domestic pricing required and wasn’t competitive</fullName>
            </value>
            <value>
                <fullName>Flywire cannot settle in client jurisdictions</fullName>
            </value>
            <value>
                <fullName>Flywire did not have Licensing</fullName>
            </value>
            <value>
                <fullName>FW ERP Integration did not meet requirements</fullName>
            </value>
            <value>
                <fullName>Implementation resources</fullName>
            </value>
            <value>
                <fullName>KYC</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Local ACH payouts required</fullName>
            </value>
            <value>
                <fullName>Local acquiring required</fullName>
            </value>
            <value>
                <fullName>Not Budgeted</fullName>
            </value>
            <value>
                <fullName>Online Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Organizational Changes</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other (See Details)</fullName>
            </value>
            <value>
                <fullName>Partnerships</fullName>
            </value>
            <value>
                <fullName>Payables API</fullName>
            </value>
            <value>
                <fullName>Product Not Available in Region</fullName>
            </value>
            <value>
                <fullName>Receivables API - Client wants to own checkout UI</fullName>
            </value>
            <value>
                <fullName>Recurring Payments</fullName>
            </value>
            <value>
                <fullName>References</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Staying with existing internal process</fullName>
            </value>
            <value>
                <fullName>Staying with incumbent provider</fullName>
            </value>
            <value>
                <fullName>Too expensive</fullName>
            </value>
            <value>
                <fullName>Too small</fullName>
            </value>
            <value>
                <fullName>Virtual Bank Accounts in Client Name</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>