FLY wire David/force-app/main/default/objects/Opportunity/fields/mkto_si__MarketoAnalyzer__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__MarketoAnalyzer__c</fullName>
    <description>This creates a link to the Marketo Opportunity Influence Analyzer. This feature requires an active subscription to Marketo Revenue Cycle Analytics.</description>
    <formula>HYPERLINK (&quot;/apex/mkto_si__MarketoRedirect?actionName=salesInsightAnalytics&amp;reportType=AccountAnalyzer&amp;objType=Opportunity&amp;objId=&quot; &amp; Id, IMAGE($Label.mkto_si__marketo_logo_16, $Label.mkto_si__marketo_opportunity_analysis))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketo Opportunity Analysis</label>
    <type>Text</type>
</CustomField>