FLY wire David/force-app/main/default/objects/Opportunity/fields/Needs_Finance_Approval__c.field-meta.xml
<CustomField>
    <fullName>Needs_Finance_Approval__c</fullName>
    <formula>OR(
  SBQQ__PrimaryQuote__r.Product_Discount_10__c &gt;= 1,
  AND (
    Usage_Discount_10__c &gt;= 1,
    SBQQ__PrimaryQuote__r.DOM_Discount_Requires_Approval__c = true
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Needs Revenue (Finance) Approval</label>
    <type>Checkbox</type>
</CustomField>