FLY wire David/force-app/main/default/objects/Opportunity/fields/Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Amount__c</fullName>
    <description>Roll-up SUM of the Net ARR on all Products on this Opportunity</description>
    <inlineHelpText>This is the Estimated Opportunity Net Revenue in USD. It is the total sum from all of the products added to the opportunity.</inlineHelpText>
    <label>Net ARR</label>
    <summarizedField>OpportunityLineItem.Total_Net_ARR__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Quote_Line_Type__c</field>
        <operation>equals</operation>
        <value>New</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>