FLY wire David/force-app/main/default/objects/Opportunity/fields/Net_Patient_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Net_Patient_Revenue__c</fullName>
    <formula>Account.Net_Patient_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OBS Net Patient Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>