FLY wire David/force-app/main/default/objects/Opportunity/fields/No_Approvals_Required__c.field-meta.xml
<CustomField>
    <fullName>No_Approvals_Required__c</fullName>
    <description>BOPI-844 This quote field allows the quote to by pass all approval rules</description>
    <formula>SBQQ__PrimaryQuote__r.No_Approvals_Required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Approvals Required</label>
    <type>Checkbox</type>
</CustomField>