FLY wire David/force-app/main/default/objects/Opportunity/fields/No_Bid_Override__c.field-meta.xml
<CustomField>
    <fullName>No_Bid_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Override No Bid to allow Loopio Button to appear so they can request an RFP regardless of their No Bid Response.SAL-2891</description>
    <inlineHelpText>Check if you want to Override the No Bid Response to request an RFP anyway. You will need to provide a Reason.</inlineHelpText>
    <label>No Bid Override</label>
    <type>Checkbox</type>
</CustomField>