FLY wire David/force-app/main/default/objects/Opportunity/fields/No_Bid_Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>No_Bid_Override_Reason__c</fullName>
    <description>If Bid/No Bid is No, but we want to request RFP bids anyway. Provide a reason so the Loopio Button can be exposed. SAL-2891</description>
    <inlineHelpText>If Bid/No Bid is No, but we want to request RFP bids anyway. Provide a reason so the Loopio Button can be exposed.</inlineHelpText>
    <label>No Bid Override Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>