FLY wire David/force-app/main/default/objects/Opportunity/fields/No_International_Payers_At_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>No_International_Payers_At_Opportunity__c</fullName>
    <description>How many international payers does the client serve?
BOPI-606 This field is only used for Agents. Once the Agents start using CPQ, this should be deprecated</description>
    <inlineHelpText>Enter the # of international payers that this opportunity represents for Flywire. This number may or may not be the same as the total number of intl. payers on the parent account.</inlineHelpText>
    <label>No. International Payers At Opp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>