FLY wire David/force-app/main/default/objects/Opportunity/fields/No_of_Bizible_Touches__c.field-meta.xml
<CustomField>
    <fullName>No_of_Bizible_Touches__c</fullName>
    <description>Populated via schedule trigger flow run daily on open opportunities. This is a rollup field with the total count of buyer attribution touchpoints under the opportunity. SAL-3208</description>
    <inlineHelpText>Populated via schedule trigger flow run daily on open opportunities. This is a rollup field with the total count of buyer attribution touchpoints under the opportunity.</inlineHelpText>
    <label># of Bizible Touches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>