FLY wire David/force-app/main/default/objects/Opportunity/fields/No_Of_Opportunities_del__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Opportunities_del__c</fullName>
    <description>&quot;Power of One Rule&quot; to help with reporting. Not needed on page layouts.</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OBS No. Of Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>