FLY wire David/force-app/main/default/objects/Opportunity/fields/No_Product_Config_Required__c.field-meta.xml
<CustomField>
    <fullName>No_Product_Config_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to use and check off if the opportunity created does not require a new product configuration portal to be created. For example - Outbound opportunities sold through our Cambridge Mercantile/Global Payments partnership - these do not require a Flywire portal thus a Flywire Product Config record is not required.</description>
    <label>No Product Config Required</label>
    <type>Checkbox</type>
</CustomField>