FLY wire David/force-app/main/default/objects/Opportunity/fields/Note_to_Legal__c.field-meta.xml
<CustomField>
    <fullName>Note_to_Legal__c</fullName>
    <description>Created for BOPI-328</description>
    <inlineHelpText>Enter Contract requests such as desired Contract Start Date</inlineHelpText>
    <label>Note to Legal</label>
    <type>TextArea</type>
</CustomField>